--- a/src/css/coverage.css
+++ b/src/css/coverage.css
@@ -90,7 +90,7 @@ td {
   cursor: pointer;
 }
 
-.modal {
+.modal, .modal-2 {
   /* display: none; */
   /* Hidden by default */
   position: fixed;
@@ -111,6 +111,10 @@ td {
   /* Black w/ opacity */
 }
 
+.modal-2 {
+  display: none;
+}
+
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
@@ -120,6 +124,19 @@ td {
   border: 1px solid #888;
   width: 12%;
   /* Could be more or less, depending on screen size */
+}
+
+.waypoints-content {
+  background-color: #fefefe;
+    margin: 15% auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-top: 10px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+    height: auto;
 }
 
 /* The Close Button */
@@ -140,3 +157,15 @@ td {
 /* label {
   margin-top: 100px;
 } */
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+  background-color: #f2f2f2;
+}
